# vscode-cmake-stm32-debug

./: README.MD
stm32-cmake/examples/fetch-cmsis-hal/: CMakeLists.txt  gpio.c  main.c  main.h
stm32-cmake/examples/fetch-cube/: CMakeLists.txt  main.c
stm32-cmake/examples/template/: CMakeLists.txt
